# momentum-hub

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  DESIGN.md  LICENSE  README.md  REFACTORING_SUMMARY.md  SUBMISSION_CHECKLIST.md  TODO.md  USAGE.md  __init__.py  category.py  check_db.py  cli_analysis.py  cli_category_management.py  cli_display.py  cli_export.py  cli_goal_management.py  cli_habit_management.py  cli_utils.py  completion.py  data_model_cli.py  debug_goal.db  encouragements.py  enhanced_demo.py  error_manager.py  generate_code_based_diagrams.py  goal.py  habit.py  habit_analysis.py  habits_export.csv  inspect_test_dbs.py  momentum_cli.py  momentum_db.py  momentum_main.py  momentum_utils.py  pyproject.toml  requirements.txt  (+12 more)
.github/workflows/: tests.yml
CSV Export/: all_completions_export_20250711_072830.csv  all_completions_export_20250712_100004.csv  all_completions_export_20251102_220458.csv  all_completions_export_20251112_172558.csv  all_completions_export_20251112_172715.csv  all_completions_export_20251112_172907.csv  all_completions_export_20251112_172935.csv  all_completions_export_20251112_173036.csv  all_completions_export_20251112_173321.csv  all_completions_export_20251112_173954.csv  all_completions_export_20251112_174218.csv  all_completions_export_20251112_174731.csv  all_completions_export_20251112_175010.csv  all_completions_export_20251112_175402.csv  all_completions_export_20251112_175433.csv  all_completions_export_20251112_175525.csv  all_completions_export_20251112_175647.csv  all_completions_export_20251112_175755.csv  all_completions_export_20251112_175955.csv  all_completions_export_20251112_180205.csv  all_completions_export_20251112_180413.csv  all_completions_export_20251112_180557.csv  all_completions_export_20251112_180902.csv  all_completions_export_20251112_190951.csv  all_completions_export_20251112_191235.csv  all_completions_export_20251112_202518.csv  all_completions_export_20251112_211213.csv  all_completions_export_20251112_212823.csv  all_completions_export_20251112_213058.csv  all_completions_export_20251113_154115.csv  all_completions_export_20251113_154503.csv  all_completions_export_20251113_164548.csv  all_completions_export_20251113_190125.csv  all_completions_export_20251113_193115.csv  all_completions_export_20251113_203310.csv  all_completions_export_20251113_204006.csv  all_completions_export_20251113_204155.csv  all_completions_export_20251113_204944.csv  all_completions_export_20251113_205838.csv  all_completions_export_20251113_212916.csv  (+316 more)
diagrams/: architecture.md  core_design_accurate.puml  mapping_table.puml  module_mapping.md
diagrams/uml/: class_diagram_code.puml  component_diagram_code.puml  data_flow_diagram.puml  deployment_diagram.puml  module_mapping_diagram.puml  package_diagram.puml  sequence_diagram.puml  system_architecture_code.puml
docs/: api.md  storage_persistence_design.md  storage_persistence_slide.md
momentum_hub/: __init__.py  __main__.py  category.py  check_db.py  cli_analysis.py  cli_category_management.py  cli_display.py  cli_export.py  cli_goal_management.py  cli_habit_management.py  cli_utils.py  completion.py  encouragements.py  error_manager.py  goal.py  habit.py  habit_analysis.py  momentum_cli.py  momentum_db.py  momentum_main.py  momentum_utils.py  seed_data.py
momentum_presenation/: demo_completions.csv  demo_habits.csv
scripts/: seed_demo_db.py
scripts/maintenance/: README.md  backup_db.py  check_completion_times.py  cleanup_duplicate_completions.py  import_refactor_tools.py  list_habit_completions.py  patch_habit_created_at.py
tests/: conftest.py  test_category.py  test_cli_analysis.py  test_cli_category_management.py  test_cli_display.py  test_cli_goal_management.py  test_cli_habit_management.py  test_cli_utils.py  test_core.py  test_data.py  test_db.py  test_edge_cases.py  test_encouragements.py  test_end_to_end.py  test_error_handling.py  test_error_manager.py  test_export.py  test_goal.py  test_habit.py  test_habit_analysis.py  test_momentum_cli.py  test_momentum_utils.py  test_pure_analysis.py  test_seed_data.py  test_setup.py  test_storage_persistence.py  test_streaks.py
tests/test_dbs/: test_momentum.db
