[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum-hub"
version = "1.0.0"
description = "A CLI habit tracker for building and maintaining daily/weekly habits."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Aaron Malunga", email = "malungaron@gmail.com"}
]
keywords = ["habit", "tracker", "cli", "productivity", "routine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "questionary>=1.10.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pyfiglet>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=7.0.0",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/aaronmalunga/momentum-hub"
Documentation = "https://github.com/aaronmalunga/momentum-hub#readme"
Repository = "https://github.com/aaronmalunga/momentum-hub.git"
Issues = "https://github.com/aaronmalunga/momentum-hub/issues"

[project.scripts]
momentum = "momentum_main:main"

[tool.setuptools]
# This is a flat-layout project with modules at the root, not packages
# Setuptools will auto-discover modules

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers --cov=. --cov-report=term"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = [
    "momentum_main",
    "momentum_cli",
    "momentum_db",
    "momentum_utils",
    "habit",
    "goal",
    "category",
    "cli_analysis",
    "cli_habit_management",
    "cli_goal_management",
    "cli_category_management",
    "cli_export",
    "habit_analysis",
    "seed_data",
    "completion",
    "cli_utils",
    "cli_display",
    "encouragements",
    "error_manager"
]
omit = [
    "tests/test_data.py",
    "tests/__pycache__/*",
    ".venv/*",
    "check_db.py",
    "inspect_test_dbs.py",
    "data_model_cli.py",
    "momentum_main.py",
    "PRESENTATION_SLIDES_EXPLAINED.py",
    "SQL_SCHEMA_DIAGRAM_README.py",
    "generate_arch_diagrams.py",
    "generate_kpi_explanation_slide.py",
    "setup.py",
    "enhanced_demo.py",
    "generate_code_based_diagrams.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"
